--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,11 +42,12 @@ FetchContent_Declare(
 )
 FetchContent_MakeAvailable(json)
 
+
 add_executable(game main.c)
 target_link_libraries(game PRIVATE box2d raylib)
 
 add_executable(construction src/vakwerk.cpp src/construction.cpp)
-target_link_libraries(construction PRIVATE box2d raylib)
+target_link_libraries(construction PRIVATE box2d raylib nlohmann_json::nlohmann_json)
 
 if (MSVC)
 	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT construction)
